--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
     </style>
 </head>
 <body>
-    <h1>I'm Sorry, [Friend's Name] 🙏</h1>
+    <h1>I'm Sorry 🙏</h1>
     <div class="apology-message">
-        <img src="https://via.placeholder.com/100" alt="Your Avatar" class="avatar">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.alamy.com%2Fapologize-card-sadness-kawaii-little-girl-with-red-heart-shaped-balloon-inscription-im-sorry-forgive-me-please-cute-baby-girl-apologize-vector-i-image437087735.html&psig=AOvVaw1W-pcvtglhjr77PO86uM0g&ust=1739279332579000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLiS_cyWuYsDFQAAAAAdAAAAABAE" alt="Your Avatar" class="avatar">
         <h2>😔 I messed up...</h2>
-        <p>Hi there,</p>
         <p>I'm really sorry for what happened. I never meant to hurt you. 😞</p>
-        <p>Your friendship means the world to me, and I hope we can move past this. 💖</p>
+        <p>You mean the world to me, and I hope we can move past this. 💖</p>
         <div class="emoji">🤞😢</div>
         <a href="https://www.instagram.com/direct/new/" class="button">Let's Talk!</a>
     </div>
